# wwdcdigest

./: README.md  pyproject.toml
src/wwdcdigest/: __init__.py  _translate.py  cli_ai.py  digest.py  factory.py  formatter.py  interfaces.py  logger.py  markdown_utils.py  models.py  openai_utils.py  summarizer.py  translator.py  video.py  video_processor.py  webvtt_combiner.py  webvtt_utils.py
src/wwdcdigest/cli/: __init__.py  digest.py  main.py  utils.py
tests/: test_cli_ai.py  test_digest.py  test_factory.py  test_formatter.py  test_markdown_utils.py  test_openai_config.py  test_summarizer.py  test_translate.py  test_translator.py  test_video.py  test_video_processor.py  test_webvtt_combiner.py  test_webvtt_utils.py
